# ac215e115groupproject

./: .dockerignore  .env.example  .gitignore  CNAME  Dockerfile.postgres  PROJECT_DOCS.md  README.md  discovered_mappings.json  docker-compose.test.yml  docker-compose.yml  index.html  pyproject.toml  requirements.txt  running_containers_config.json  sync_report_final.txt
data/: README.md
data-pipeline/: .env.example  .gitignore  Airtable API for Excel database.txt  Makefile  README.md  RICE_ANALYSIS_DOCUMENTATION.md  airtable_sync.py  airtable_sync_before_nan_fix.py  airtable_sync_fixed.py  diagnose_airtable_data.py  discover_current_tables.py  discover_mappings.py  fix_transform.py  improved_airtable_discovery.py  integrate_all_data_final.py  market_drivers.py  monitor.py  nan_fix.patch  pipeline_complete_from_source.py  requirements-py313.txt  requirements.txt  rice_price_spread_analysis.py  rice_price_spread_analysis_final.py  rice_price_spread_analysis_fixed.py  rice_price_spread_analysis_working.py  run_sync.py  sync_complete.py  sync_complete_final.py  sync_complete_final_fixed.py  sync_consolidated_singlefile.py  sync_explorer.py  sync_final.py  sync_final_patch.py  sync_onefile_runner.py  sync_orchestrator.py  sync_production_ready.py  sync_production_ready_configured.py  test_imports.py  test_nan_fix.py
docs/: DOCUMENTATION_INDEX.md
requirements/: api-gateway.txt  base.txt  dev.txt  prod.txt
services/: README.md  (+1 more)
services/nl-sql-service/: .env.example  Dockerfile  Makefile  README.md  create_tables.sql  docker-compose.yml  pyproject.toml  requirements.txt
services/nl-sql-service/app/: database.py  main.py  nl_sql_agent.py  sql_generator.py  sql_generator_local.py
services/nl-sql-service/credentials/: service-account.json
services/nl-sql-service/tests/: __init__.py  test_nl_sql.py
(+118 files in other folders)
